# git-size

./: README.md  pyproject.toml
src/git_size/: __init__.py  analyzer.py  cli.py  formatter.py
tests/: test_analyzer.py  test_cli.py  test_formatter.py
